As a jQuery extend

--- a/index.html
+++ b/index.html
@@ -35,9 +35,10 @@
     <script type="text/javascript">
         // 页面载入时初始化框架
         $(document).ready(function(){
-            var avg = new avgRuntime({
+            $.avgRuntime({
                 "dataFile": "./game.json"
-            });
+            })
+
         });
     </script>
 </body>
